--- a/src/main/resources/com/home/sphygraf/index.fxml
+++ b/src/main/resources/com/home/sphygraf/index.fxml
@@ -1,116 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
-
-<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600" prefWidth="1000" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="File">
-          <items>
-            <MenuItem mnemonicParsing="false" text="New" />
-            <MenuItem fx:id="SelectImage" mnemonicParsing="false" onAction="#seleccionarArchivo" text="Open…" />
-            <Menu mnemonicParsing="false" text="Open Recent" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Close" />
-            <MenuItem mnemonicParsing="false" text="Save" />
-            <MenuItem mnemonicParsing="false" text="Save As…" />
-            <MenuItem mnemonicParsing="false" text="Revert" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Preferences…" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Edit">
-          <items>
-            <MenuItem mnemonicParsing="false" text="Undo" />
-            <MenuItem mnemonicParsing="false" text="Redo" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Cut" />
-            <MenuItem mnemonicParsing="false" text="Copy" />
-            <MenuItem mnemonicParsing="false" text="Paste" />
-            <MenuItem mnemonicParsing="false" text="Delete" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Select All" />
-            <MenuItem mnemonicParsing="false" text="Unselect All" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Help">
-          <items>
-            <MenuItem mnemonicParsing="false" text="About MyHelloApp" />
-          </items>
-        </Menu>
-      </menus>
-    </MenuBar>
-    <SplitPane dividerPositions="0.2505567928730512, 0.7126948775055679" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-      <items>
+    <VBox>
+      <children>
+        <MenuBar VBox.vgrow="NEVER">
+          <menus>
+            <Menu mnemonicParsing="false" text="File">
+              <items>
+                <MenuItem mnemonicParsing="false" text="New" />
+                <MenuItem fx:id="seleccionarImagen" mnemonicParsing="false" onAction="#seleccionarArchivo" text="Open…" />
+
+                <Menu mnemonicParsing="false" text="Open Recent" />
+                <MenuItem mnemonicParsing="false" text="Close" />
+                <SeparatorMenuItem mnemonicParsing="false" />
+                <MenuItem mnemonicParsing="false" text="Save" />
+                <MenuItem mnemonicParsing="false" text="Save As…" />
+                <MenuItem mnemonicParsing="false" text="Revert" />
+                <SeparatorMenuItem mnemonicParsing="false" />
+                <MenuItem mnemonicParsing="false" text="Preferences…" />
+                <SeparatorMenuItem mnemonicParsing="false" />
+                <MenuItem mnemonicParsing="false" text="Quit" />
+              </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Edit">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Undo" />
+                <MenuItem mnemonicParsing="false" text="Redo" />
+                <SeparatorMenuItem mnemonicParsing="false" />
+                <MenuItem mnemonicParsing="false" text="Cut" />
+                <MenuItem mnemonicParsing="false" text="Copy" />
+                <MenuItem mnemonicParsing="false" text="Paste" />
+                <MenuItem mnemonicParsing="false" text="Delete" />
+                <SeparatorMenuItem mnemonicParsing="false" />
+                <MenuItem mnemonicParsing="false" text="Select All" />
+                <MenuItem mnemonicParsing="false" text="Unselect All" />
+              </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+              <items>
+                <MenuItem mnemonicParsing="false" text="About MyHelloApp" />
+              </items>
+            </Menu>
+          </menus>
+        </MenuBar>
+
         <AnchorPane>
           <children>
-            <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Master" textAlignment="CENTER" wrapText="false">
+            <TabPane fx:id="tpEditImage" layoutX="6.0" layoutY="41.0" prefHeight="504.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" />
+
+            <CheckBox fx:id="blancoNegro" layoutX="200.0" layoutY="18.0" mnemonicParsing="false" text="blancoNegro" visible="false" />
+            <CheckBox fx:id="InvertirH" layoutX="605.0" layoutY="18.0" mnemonicParsing="false" text="InvertirH" visible="false" />
+            <CheckBox fx:id="InvertirV" layoutX="680.0" layoutY="18.0" mnemonicParsing="false" text="InvertirV" visible="false" />
+            <CheckBox fx:id="invertirColores" layoutX="306.0" layoutY="18.0" mnemonicParsing="false" text="InvertirColor" visible="false" />
+            <CheckBox fx:id="aumentarBrillo" layoutX="407.0" layoutY="18.0" mnemonicParsing="false" text="AumentarBrillo" visible="false" />
+            <CheckBox fx:id="aplicarDifuminado" layoutX="520.0" layoutY="18.0" mnemonicParsing="false" text="Difuminar" visible="false" />
+
+          </children>
+        </AnchorPane>
+        <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
+          <children>
+            <Label maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Left status" HBox.hgrow="ALWAYS">
               <font>
-                <Font size="18.0" fx:id="x1" />
+                <Font size="11.0" fx:id="x3" />
               </font>
               <textFill>
-                <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
+                <Color red="0.625" green="0.625" blue="0.625" fx:id="x4" />
               </textFill>
             </Label>
-                  <CheckBox fx:id="BNcheckBox" layoutX="27.0" layoutY="69.0" mnemonicParsing="false" text="Blanco y Negro" />
-                  <CheckBox fx:id="HcheckBox" layoutX="27.0" layoutY="102.0" mnemonicParsing="false" text="Invertir horizontal" />
-                  <CheckBox fx:id="VcheckBox" layoutX="27.0" layoutY="135.0" mnemonicParsing="false" text="Invertir vertical" />
+            <Pane prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
+            <Label font="$x3" maxWidth="-1.0" text="Right status" textFill="$x4" HBox.hgrow="NEVER" />
           </children>
-        </AnchorPane>
-        <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
-          <content>
-            <AnchorPane id="Content" fx:id="" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="406.0">
-              <children>
-                <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="View" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                        <ImageView fx:id="imagenOriginal" fitHeight="519.0" fitWidth="364.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-              </children>
-            </AnchorPane>
-          </content>
-        </ScrollPane>
-        <AnchorPane prefHeight="551.0" prefWidth="246.0">
-          <children>
-            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Details" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                  <ImageView fx:id="imagenModificada" fitHeight="527.0" fitWidth="235.0" layoutX="11.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-                  <Button fx:id="guardarBoton" layoutX="33.0" layoutY="464.0" mnemonicParsing="false" text="Guardar" />
-          </children>
-        </AnchorPane>
-      </items>
-    </SplitPane>
-    <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
-      <children>
-        <Label maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Left status" HBox.hgrow="ALWAYS">
-          <font>
-            <Font size="11.0" fx:id="x3" />
-          </font>
-          <textFill>
-            <Color red="0.625" green="0.625" blue="0.625" fx:id="x4" />
-          </textFill>
-        </Label>
-        <Pane prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-        <Label font="$x3" maxWidth="-1.0" text="Right status" textFill="$x4" HBox.hgrow="NEVER" />
+          <padding>
+            <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+          </padding>
+        </HBox>
       </children>
-      <padding>
-        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-      </padding>
-    </HBox>
+    </VBox>
   </children>
-</VBox>
+</StackPane>
