--- a/src/main/resources/com/home/sphygraf/multi.fxml
+++ b/src/main/resources/com/home/sphygraf/multi.fxml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
+
 <StackPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600" prefWidth="1000" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <VBox>
@@ -15,7 +27,6 @@
               <items>
                 <MenuItem mnemonicParsing="false" text="New" />
                 <MenuItem fx:id="seleccionarImagen" mnemonicParsing="false" onAction="#seleccionarArchivo" text="Open…" />
-
                 <Menu mnemonicParsing="false" text="Open Recent" />
                 <MenuItem mnemonicParsing="false" text="Close" />
                 <SeparatorMenuItem mnemonicParsing="false" />
@@ -53,14 +64,13 @@
         <AnchorPane>
           <children>
             <TabPane fx:id="tpEditImage" layoutX="6.0" layoutY="41.0" prefHeight="504.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" />
-
+            <Button fx:id="seleccionarUna" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#seleccionarArchivo" text="Add file" />
             <CheckBox fx:id="blancoNegro" layoutX="200.0" layoutY="18.0" mnemonicParsing="false" text="blancoNegro" visible="false" />
             <CheckBox fx:id="InvertirH" layoutX="605.0" layoutY="18.0" mnemonicParsing="false" text="InvertirH" visible="false" />
             <CheckBox fx:id="InvertirV" layoutX="680.0" layoutY="18.0" mnemonicParsing="false" text="InvertirV" visible="false" />
             <CheckBox fx:id="invertirColores" layoutX="306.0" layoutY="18.0" mnemonicParsing="false" text="InvertirColor" visible="false" />
             <CheckBox fx:id="aumentarBrillo" layoutX="407.0" layoutY="18.0" mnemonicParsing="false" text="AumentarBrillo" visible="false" />
             <CheckBox fx:id="aplicarDifuminado" layoutX="520.0" layoutY="18.0" mnemonicParsing="false" text="Difuminar" visible="false" />
-
           </children>
         </AnchorPane>
         <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
