--- a/src/main/resources/com/home/sphygraf/editImage.fxml
+++ b/src/main/resources/com/home/sphygraf/editImage.fxml
@@ -23,6 +23,6 @@
       <Label fx:id="status" layoutX="642.0" layoutY="85.0" text="0%" />
       <Button fx:id="cancelar" cancelButton="true" layoutX="775.0" layoutY="23.0" mnemonicParsing="false" text="Cancel" />
       <CheckBox fx:id="applyBlurred" layoutX="385.0" layoutY="27.0" mnemonicParsing="false" text="Blurred" />
-
+      <Button fx:id="saveImage" layoutX="700.0" layoutY="135.0" mnemonicParsing="false" onAction="#saveImage" text="Guardar" visible="false" />
    </children>
 </AnchorPane>
