--- a/src/main/resources/com/home/sphygraf/controller/multi.fxml
+++ b/src/main/resources/com/home/sphygraf/controller/multi.fxml
@@ -17,6 +17,11 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
+
+<!-- Esta escena es una que he cogido de Scenne Builder y la he adaptado.
+  Creo que queda muy profesional-->
+
+
 <StackPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600" prefWidth="1000" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <VBox>
