--- a/src/main/resources/com/home/sphygraf/controller/multi.fxml
+++ b/src/main/resources/com/home/sphygraf/controller/multi.fxml
@@ -42,7 +42,7 @@
                 <SeparatorMenuItem mnemonicParsing="false" />
                 <MenuItem mnemonicParsing="false" text="Preferences…" />
                 <SeparatorMenuItem mnemonicParsing="false" />
-                <MenuItem mnemonicParsing="false" text="Quit" />
+                <MenuItem mnemonicParsing="false" onAction="#exitApplication" text="Quit" />
               </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Edit">
